# cmd/api/api.go
@@ -6,12 +6,14 @@ import (
 	"net/http"
 	"os"
 	"socialone/docs"
+	"socialone/internal/auth"
 	"socialone/internal/mailer"
 	"socialone/internal/store"
 	"time"
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
+	"github.com/go-chi/cors"
 	"go.uber.org/zap"
 
 	httpSwagger "github.com/swaggo/http-swagger/v2" // http-swagger middleware
@@ -24,6 +26,7 @@ type application struct{
 	store store.Storage
 	logger *zap.SugaredLogger
 	mailer	 mailer.Client
+	authenticator auth.Authenticator
 
 
 
@@ -35,8 +38,23 @@ type config struct {
 	apiUrl string
 	mail mailConfig
 	frontendURL string
+	auth authConfig
 
 
+}
+type authConfig struct{
+	basic basicConfig
+	token  tokenConfig
+
+}
+type tokenConfig struct{
+	secret string
+	exp time.Duration
+	iss string
+}
+type basicConfig struct{
+	user string
+	pass string
 }
 type mailConfig struct{
 	smtp2go smtp2goConfig
@@ -59,17 +77,29 @@ type dbConfig struct{
 
 func (app *application) mount() http.Handler {
 	r := chi.NewRouter()
+
+	r.Use(cors.Handler(cors.Options{
+
+		AllowedOrigins:   []string{"https://*", "http://*"},
+
+		AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+		ExposedHeaders:   []string{"Link"},
+		AllowCredentials: false,
+		MaxAge:           300, // Maximum value not ignored by any of major browsers
+	  }))
 	r.Use(middleware.RequestID)
 	r.Use(middleware.RealIP)
 	r.Use(middleware.Logger)
 	r.Use(middleware.Recoverer)
 
 	r.Route("/v1", func(r chi.Router) {
-		r.Get("/health", app.healthcheckHandler)
+		r.With(app.BasicAuthMiddleware()).Get("/health", app.healthcheckHandler)
 		docsURL:= fmt.Sprintf("%s/swagger/doc.json", app.config.addr)
 		r.Get("/swagger/*", httpSwagger.Handler(httpSwagger.URL(docsURL)))
 
 		r.Route("/posts", func(r chi.Router) {
+			r.Use(app.AuthTokenMiddleware)
 			r.Post("/", app.createPostHandler)
 
 			r.Route("/{postID}", func(r chi.Router) {
@@ -83,7 +113,8 @@ func (app *application) mount() http.Handler {
 		r.Route("/users", func(r chi.Router) {
 			r.Put("/activate/{token}",app.activateUserHandler)
 			r.Route("/{userID}", func(r chi.Router) {
-				r.Use(app.userContextMiddleware)
+				r.Use(app.AuthTokenMiddleware)
+				
 				r.Get("/", app.getUserHandler)
 
 				r.Put("/follow", app.followUserHandler)
@@ -92,12 +123,14 @@ func (app *application) mount() http.Handler {
 
 			})
 			r.Group(func(r chi.Router) {
+				r.Use(app.AuthTokenMiddleware)
 				r.Get("/feed",app.getUserFeedHandler)
 			})
 
 	})
 			r.Route("/authentication",func(r chi.Router) {
 			r.Post("/user",app.registerUserHandler)
+			r.Post("/token",app. createTokenHandler)
 
 		})
 	})
