# cmd/api/authentication.go
@@ -5,9 +5,11 @@ import (
 	"encoding/hex"
 	"fmt"
 	"net/http"
-	"socialone/internal/store"
 	"socialone/internal/mailer"
+	"socialone/internal/store"
+	"time"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 )
 
@@ -112,6 +114,69 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		app.internalServerError(w,r,err)
 	}
 
+
+
+}
+type CreateUserTokenPayload struct{
+	Email string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=3,max=72"`
+}
+// createTokenHandler godoc
+// @Summary      Creates a token
+// @Description  Creates a token for a user
+// @Tags         authentication
+// @Accept       json
+// @Produce      json
+// @Param        payload body CreateUserTokenPayload true "User credentials"
+// @Success      200 {string} string "Token"
+// @Failure      400 {object} error
+// @Failure      401 {object} error
+// @Failure      500 {object} error
+// @Router       /authentication/token [post]
+func (app *application) createTokenHandler(w http.ResponseWriter, r *http.Request) {
+    //parse the payload credentials
+	var payload CreateUserTokenPayload
+	if err:= ReadJson(w,r,&payload); err!=nil {
+		app.badRequestResponse(w,r,err)
+		return
+
+	}
+	if err:=Validate.Struct(payload);err!=nil{
+		app.badRequestResponse(w,r,err)
+		return
+	}
+	//fetch the user from the payload
+
+	user,err:= app.store.Users.GetByEmail(r.Context(),payload.Email)
+	if err!=nil{
+		switch err{
+		case store.ErrNotFound:
+			app.unauthorisedErrorResponse(w,r,err)
+		default:
+			app.internalServerError(w,r,err)}
+
+		return
+	}
+	//generate the token-> add claims
+	claims:= jwt.MapClaims{
+		 "sub": user.ID,
+		 "iss": app.config.auth.token.iss,
+		 "aud": app.config.auth.token.iss,
+		 "exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		 "iat": time.Now().Unix(),
+		 "nbf": time.Now().Unix(),
+
+	}
+	token,err:= app.authenticator.GenerateToken(claims)
+	if err!=nil{
+		app.internalServerError(w,r,err)
+		return
+	}
+	//send to client
+	if err:=app.jsonResponse(w,http.StatusCreated,token); err!=nil{
+		app.internalServerError(w,r,err)
+
+	}
 
 
 }
